Fixing jumpy screen

--- a/imports/styles/_base.scss
+++ b/imports/styles/_base.scss
@@ -6,12 +6,15 @@
 
 html {
   font-size: 62.5%;
+  overflow: hidden;
 }
 
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $base-font-size;
   background-color: $background-gray;
+  overflow-y: auto;
+  -webkit-overflow-scrolling:touch;
 }
 
 h1.workout--h1 {
